@@ -12,13 +12,13 @@ import presentation.screens.dayPartMenu.morningButtons.MorningButtons
 import presentation.screens.dayPartMenu.morningButtons.toBundle
 
 @Composable
-fun DayPartMenuButton(button: MorningButtons) = Box(modifier = Modifier.wrapContentHeight()){
-    val subtasks = ChecklistSubMenu(button.toBundle().chiaro, itemNames = listOf("just", "random", "stuff"))
+fun ChecklistButton(button: MorningButtons) = Box(modifier = Modifier.wrapContentHeight()){
+    val subtasks = SubTaskList(button.toBundle().chiaro, itemNames = listOf("just", "random", "stuff"))
     Column(
         horizontalAlignment = Alignment.CenterHorizontally,
         verticalArrangement = Arrangement.spacedBy(4.dp),
     ){
-        IconTextTimeButton(button.toBundle())
+        MainTaskButton(button.toBundle())
         subtasks.forEach { task -> task.invoke() }
     }
 }
